--- a/templates/json/tasks.json
+++ b/templates/json/tasks.json
@@ -7,7 +7,7 @@
     "done": {{ task.done|android }},
     "assignedTo": {{ task.assigned_to.id|android }},
     "project": {{ task.project.id|android }},
-    "creator": {{ task.creator|android }},
+    "creator": {{ task.creator.username|android }},
     "createDate": {{ task.create_date|date:"d-m-y"|android }},
     "dueDate": {{ task.due_date | date:"d-m-y"|android}}
   }{% if not forloop.last %},{% endif %}
