--- a/templates/json/project_info.json
+++ b/templates/json/project_info.json
@@ -1,9 +1,9 @@
 {% load filters %}
 {
-  'khatm': {{ khatm }},
-  'remaining_tasks': {{ remaining_tasks }},
-  'participated': {{ participated|android }},
-  'has_remaining_task': {{ has_remaining_task|android }},
-  'done_tasks': {{ done_tasks }},
-  'type': {{ type }}
+  "khatm": {{ khatm }},
+  "remaining_tasks": {{ remaining_tasks }},
+  "participated": {{ participated|android }},
+  "has_remaining_task": {{ has_remaining_task|android }},
+  "done_tasks": {{ done_tasks }},
+  "type": {{ type }}
 }
